# fx

./: .gitignore  Cargo.toml
docs/: grammar.md
fx-cli/: Cargo.toml
fx-cli/src/: main.rs
fx-core/: Cargo.toml
fx-utils/: Cargo.toml
fx_ast/: Cargo.toml
fx_ast/src/: ast.rs  expr.rs  ident.rs  inbuilt.rs  lib.rs  locator.rs  stmt.rs  token.rs
fx_cli/: Cargo.toml
fx_core/: Cargo.toml
fx_core/src/: lib.rs
fx_lexer/: Cargo.toml
fx_lexer/src/: error.rs  lexer.rs  lib.rs
fx_parser/: Cargo.toml
fx_sandbox/: Cargo.toml
fx_sandbox/src/: main.rs
fx_std/: Cargo.toml
fx_std/src/: error.rs  fs.rs
fx_utils/: Cargo.toml
fx_utils/src/: lib.rs  reference.rs  types.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
