[workspace]
resolver = "2"
members = [
  "fx_core",
  "fx_utils",
  "fx_cli",
  "fx_sandbox",
  "fx_lexer",
  "fx_parser",
  "fx_std",
]

default-members = ["fx_sandbox"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Radha", "Krsna"]


[workspace.dependencies]
thiserror = "1.0"
